[package]
name = "book_of_days"
version = "0.1.0"
authors = ["oluwaseun <lere.akinwunmi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
warp = "0.3"
futures = { version = "0.3", default-features = false, features = ["alloc"]}
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
pretty_env_logger = "0.4"
uuid = { version="0.8", features = ["serde", "v4"] }
chrono = "0.4"
bcrypt = "0.10"
jsonwebtoken = "7"